--- a/src/components/SiderMenu/SiderMenu.scss
+++ b/src/components/SiderMenu/SiderMenu.scss
@@ -1,4 +1,19 @@
 .container {
   min-height: 100vh;
 }
+.logoContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #002140;
+  height: 64px;
+}
+.logoContent>img {
+  height: 32px;
+}
+.logoContent>h3 {
+  font-size: 20px;
+  margin-left: 12px;
+  color: #fff;
+}
 
