--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+
+html, body {
+  font-family: "Chinese Quote",-apple-system,BlinkMacSystemFont,"Segoe UI","PingFang SC","Hiragino Sans GB","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 14px;
 }
 h1, h2, h3, h4, h5, h6, ul, li{
   margin:0;
