--- a/src/components/Charts/ChartCard/index.scss
+++ b/src/components/Charts/ChartCard/index.scss
@@ -40,6 +40,8 @@
 }
 .contentFixed {
   display: flex;
+  width: 100%;
+  justify-content: flex-start;
 }
 .footer {
   border-top: 1px solid #e8e8e8;
