--- a/src/views/Dashboard/Analysis.scss
+++ b/src/views/Dashboard/Analysis.scss
@@ -105,5 +105,12 @@
 }
 
 .offlineCard{
-  
+  :global {
+    .ant-tabs-ink-bar {
+      bottom: auto;
+    }
+    .ant-tabs-bar {
+      border-bottom: none;
+    }
+  }
 }
