--- a/src/components/NumberInfo/index.scss
+++ b/src/components/NumberInfo/index.scss
@@ -3,7 +3,10 @@
 }
 
 .numberInfoTitle{
-
+  font-size: 16px;
+  color: rgba(0, 0, 0, .65);
+  margin-bottom: 16px;
+  transition: all .3s ease;
 }
 .numberInfoSubTitle {
   color: rgba(0, 0, 0, .45);
@@ -43,4 +46,19 @@
       }
     }
   }
+}
+
+.numberInfolight {
+  .numberInfoValue {
+    & > span {
+      color: rgba(0, 0, 0, .65);
+    }
+  }
+}
+
+.suffix {
+  color: rgba(0,0,0,.65);
+  font-size: 16px;
+  font-style: normal;
+  margin-left: 4px;
 }
