--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
   font-size: 14px;
 }
-h1, h2, h3, h4, h5, h6, ul, li{
+h1, h2, h3, h4, h5, h6, ul, li, p{
   margin:0;
   padding: 0;
 }
