--- a/src/views/Dashboard/Workplace.scss
+++ b/src/views/Dashboard/Workplace.scss
@@ -30,6 +30,7 @@
 
 .extraContent {
   display: flex;
+  margin-bottom: 28px;
   .statItem {
     padding:  0 32px;
     position: relative;
@@ -63,6 +64,50 @@
       &:after {
         display: none;
       }
+    }
+  }
+}
+.activeCard{
+  .activitiesList {
+    padding: 0 24px 8px;
+    .username {
+      color: rgba(0,0,0,.65);
+    }
+    .event {
+      font-weight: 400;
+    }
+    .datetime {
+      color: rgba(0,0,0,.25);
+    }
+    :global {
+      .ant-list-item-meta-title {
+        color: rgba(0,0,0,.65);
+        font-size: 14px;
+        line-height: 22px;
+        margin-bottom: 4px;
+      }
+    }
+  }
+}
+
+.members {
+  a {
+    display: block;
+    height: 24px;
+    margin: 12px 0;
+    line-height: 24px;
+  }
+  .member {
+    line-height: 24px;
+    font-size: 14px;
+    color: rgba(0,0,0,.65);
+    max-width: 100px;
+    vertical-align: top;
+    display: inline-block;
+    margin-left: 12px;
+    transition: all .3s ease;
+    &:hover {
+      color: #40a9ff;
     }
   }
 }
